# skypro_beta_widget

./: pyproject.toml
src/: masks.py  processing.py  widget.py
